Fix SVG icons not showing up on homepage

--- a/docusaurus/src/scss/sidebar.scss
+++ b/docusaurus/src/scss/sidebar.scss
@@ -357,6 +357,12 @@ $selector-color-mode-toggle-wrapper: 'div[class*="ColorModeToggle"]';
         content:'\E12A';
       }
     }
+    .plugin-pages {
+      svg {
+        display: initial;
+      }
+    }
+
   }
 }
 
